fix header size on mobile

--- a/styles.css
+++ b/styles.css
@@ -423,8 +423,9 @@ footer {
     }
     
     .hero {
-        height: 500px;
-        padding-top: 120px;
+        /* height: 500px;
+        padding-top: 120px; */
+        padding-top: calc(160px + 1rem); /* enough to offset stacked header */
     }
     
     .hero h2 {
